refactor(doc): now should be working as expected

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: paylike_flutter_engine
-description: A new Flutter package project.
+description: Provides the core functionality required for executing payment flows in the Paylike Ecosystem (including webview widget to solve TDS). 
 version: 0.0.1
 homepage: https://paylike.io
 
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   pay: ^1.0.8
+  paylike_currencies: ^1.0.7
   paylike_dart_client: ^1.0.10
   paylike_money: ^1.0.1
   webview_flutter: ^3.0.2
